<?xml version="1.0" encoding="utf-8"?>
<!-- This file is /res/xml/mypreferences.xml -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="flight_option_preference"
    android:title="@string/prefTitle"
    android:summary="@string/prefSummary">
 
 
 <PreferenceScreen 
    android:title="@string/bluetooth_pair"
    android:summary="@string/bluetooth_pairSummary">
   <intent android:action="android.settings.BLUETOOTH_SETTINGS">
   </intent>
   </PreferenceScreen>
   
   <!--  <CheckBoxPreference
    android:title="@string/scanAll"
    android:key="pref_scanAll"
    android:defaultValue="@string/pref_scanAll_default"
    android:summary="@string/scanAllSummary"/>-->
    
    
    <CheckBoxPreference
    android:title="@string/noSleep"
    android:key="pref_noSleep"
    android:defaultValue="@string/pref_noSleepDefault"
    android:summary="@string/noSleepSummary"/>
    
     <CheckBoxPreference
    android:title="@string/AutoSelectPanel"
    android:key="pref_AutoSelectPanel"
    android:defaultValue="@string/pref_AutoSelectPanelDefault"
    android:summary="@string/AutoSelectPanelSummary"/>
    
      <!-- <CheckBoxPreference
    android:title="Call Taxi"
    android:key="pref_taxi"
    android:summary="Call Taxi when Tipsy or Drunk"/> -->
   
     <ListPreference
    android:key="@string/fps_override"
    android:title="@string/FPSOverrideTitle"
    android:summary="@string/FPSOverrideSummary"
    android:entries="@array/FPSOverride_options"
    android:entryValues="@array/FPSOverride_values"
    android:dialogTitle="@string/dialogTitleFPSOverride"
    android:defaultValue="@string/FPSOverrideDefault" />
    
        
    <ListPreference
    android:key="@string/selected_matrix"
    android:title="@string/matrix"
    android:summary="@string/matrixSummary"
    android:entries="@array/matrix_options"
    android:entryValues="@array/matrix_values"
    android:dialogTitle="@string/dialogTitleMatrix"
    android:defaultValue="@string/matrix_default_value" />
  
    <CheckBoxPreference
    android:title="@string/ProxOn"
    android:key="pref_ProxOn"
    android:defaultValue="@string/pref_ProxOn"
    android:summary="@string/ProxOnSummary"/>
    
    <CheckBoxPreference
    android:title="@string/showProxValue"
    android:key="pref_showProxValue"
    android:defaultValue="@string/pref_showProxValue"
    android:summary="@string/showProxValueSummary"/>
    
   
    
   <EditTextPreference
   android:title="@string/proximityThresholdLower"
   android:key="@string/pref_proxThresholdLower"
   android:numeric="integer"
   android:maxLength="3"
   android:defaultValue="@string/proximityThresholdLowerDefault"
   android:summary="@string/proximityThresholdLowerSummary"/>
   
   <EditTextPreference
   android:title="@string/proximityThresholdUpper"
   android:key="@string/pref_proxThresholdUpper"
   android:numeric="integer"
   android:maxLength="3"
   android:defaultValue="@string/proximityThresholdUpperDefault"
   android:summary="@string/proximityThresholdUpperSummary"/>
   
   <EditTextPreference
   android:title="@string/proximityPin"
   android:key="@string/pref_proximityPin"
   android:numeric="integer"
   android:maxLength="2"
   android:defaultValue="@string/proximityPinDefault"
   android:summary="@string/proximityPinSummary"/>
   
   <EditTextPreference
   android:title="@string/ProximityTimerInterval"
   android:key="@string/pref_ProximityTimerInterval"
   android:numeric="integer"
   android:maxLength="3"
   android:defaultValue="@string/ProximityTimerIntervalDefault"
   android:summary="@string/ProximityTimerIntervalSummary"/>
   
   <EditTextPreference
   android:title="@string/ProximityResetDelay"
   android:key="@string/pref_ProximityResetDelay"
   android:numeric="integer"
   android:maxLength="3"
   android:defaultValue="@string/ProximityResetDelayDefault"
   android:summary="@string/ProximityResetDelaySummary"/>
   
    
    <CheckBoxPreference
    android:title="@string/debugMode"
    android:key="pref_debugMode"
    android:defaultValue="@string/pref_debugModeDefault"
    android:summary="@string/debugModeSummary"/>  
  
  
    
    
     
   </PreferenceScreen>